Migrating to AWS database and item functionality
